# ChangeLog for dev-java/sun-jdk
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Jul 2008; Serkan Kaba <serkan@gentoo.org>
  -sun-jdk-1.7.0.0_alpha28.ebuild, +sun-jdk-1.7.0.0_alpha30.ebuild:
  Bump to latest alpha. Thanks to Fabian Fingerle <fabian@datensalat.eu> for
  submitting the bump.

  08 Jun 2008; Serkan Kaba <serkan@gentoo.org> -sun-jdk-1.7.0.0_alpha26.ebuild
  +sun-jdk-1.7.0.0_alpha28.ebuild
  Bump to latest alpha. Thanks to Fabian Fingerle <fabian@datensalat.eu> for
  submitting the bump.

  02 May 2008; Serkan Kaba <serkan_kaba@yahoo.com>
  -sun-jdk-1.7.0.0_alpha18.ebuild, -sun-jdk-1.7.0.0_alpha21.ebuild,
  -sun-jdk-1.7.0.0_alpha22.ebuild, -sun-jdk-1.7.0.0_alpha23.ebuild,
  -sun-jdk-1.7.0.0_alpha24.ebuild, +sun-jdk-1.7.0.0_alpha26.ebuild:
  Bump to lastest snapshot. Prune old versions.

*sun-jdk-1.7.0.0_alpha22 (24 Oct 2007)

  24 Oct 2007; Petteri Räty <betelgeuse@gentoo.org>
  +sun-jdk-1.7.0.0_alpha22.ebuild:
  Version bump.

*sun-jdk-1.7.0.0_alpha21 (01 Oct 2007)

  01 Oct 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  +sun-jdk-1.7.0.0_alpha21.ebuild:
  Version bump

*sun-jdk-1.7.0.0_alpha18 (18 Aug 2007)

  11 Aug 2007; Petteri Räty <betelgeuse@gentoo.org> 
  +sun-jdk-1.7.0.0_alpha18.ebuild:
  Version bump.

*sun-jdk-1.7.0.0_alpha16 (21 Jul 2007)

  21 Jul 2007; Petteri Räty <betelgeuse@gentoo.org>
  +sun-jdk-1.7.0.0_alpha16.ebuild:
  Version bump.

*sun-jdk-1.7.0.0_alpha15 (14 Jul 2007)

  14 Jul 2007; Petteri Räty <betelgeuse@gentoo.org>
  +sun-jdk-1.7.0.0_alpha15.ebuild:
  Version bump.

  12 Jul 2007; Petteri Räty <betelgeuse@gentoo.org>
  -sun-jdk-1.6.0.02_alpha02.ebuild:
  No need for 1.6u2 alphas as the real thing is out.

  23 Jun 2007; Petteri Räty <betelgeuse@gentoo.org>
  sun-jdk-1.7.0.0_alpha14.ebuild:
  Add pack PACKED_JARS as a local variable in src_unpack as this way of doing
  it uses it.

  23 Jun 2007; Petteri Räty <betelgeuse@gentoo.org>
  sun-jdk-1.7.0.0_alpha14.ebuild: