@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Jul 2008; Serkan Kaba <serkan@gentoo.org>
+  -sun-jdk-1.7.0.0_alpha30.ebuild, +sun-jdk-1.7.0.0_alpha31.ebuild:
+  Bump to latest alpha. Thanks to Fabian Fingerle <fabian@datensalat.eu> for
+  submitting the bump.
+
   04 Jul 2008; Serkan Kaba <serkan@gentoo.org>
   -sun-jdk-1.7.0.0_alpha28.ebuild, +sun-jdk-1.7.0.0_alpha30.ebuild:
   Bump to latest alpha. Thanks to Fabian Fingerle <fabian@datensalat.eu> for
